--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
-    <title>Pedxo</title>
+    <title>Pedxo - Add creative human behind AI agents</title>
   </head>
   <body>
     <div id="root"></div>
